# research-companion

./: CLAUDE.md  CONTEXT.md  README.md
backend/: pyproject.toml
backend/backend/: angle_explorer.py  approach_explorer.py  chunker.py  document_cleaner.py  embedder.py  extractor.py  ingestion.py  interview.py  llm.py  main.py  model_router.py  outline_generator.py  projects.py  quality_gate.py  resource_store.py  runner.py  semantic_ingester.py  semantic_ingester_v2.py  settings.py  worker_main.py
backend/tests/: test_angle_explorer.py  test_api_imports.py  test_approach.py  test_approach_explorer.py  test_block_editor.py  test_chunker.py  test_document_cleaner.py  test_embedder.py  test_extractor.py  test_health.py  test_ingestion.py  test_interview.py  test_model_router.py  test_outline_generator.py  test_port.py  test_projects.py  test_quality_gate.py  test_resource_store.py  test_resources_api.py  test_run.py  test_runner.py  test_runner_e2e.py  test_search_api.py  test_semantic_ingester.py  test_semantic_ingester_v2.py  test_settings.py  test_setup_chat.py  test_transcript.py
buddy/: ChatTurn.jsx  Composer.jsx  HomeChat.jsx  README.md  ResourcesPage.jsx  ResourcesPanel.jsx  SettingsPage.jsx  Sidebar.jsx  Workspace.jsx  app.jsx  icons.jsx  index.html
docs/: prd-research-companion.md
docs/adr/: 0001-settings-and-model-router.md  0002-workflow-approach-replaces-angle-and-layout.md  (+2 more)
frontend/: index.html  main.js  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  sidecar.rs
(+57 files in other folders)
