[package]
name = "research-companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "research_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "research-companion"
path = "src/main.rs"

[features]
# Enabled by tauri-build / `cargo tauri dev|build`; requires GTK + WebKit system libs.
tauri-app = ["dep:tauri"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
